fix(styles): time actuator cards flex: 1 to share row equally without overflow

--- a/styles/actor/sheets/storytellerscreen.scss
+++ b/styles/actor/sheets/storytellerscreen.scss
@@ -51,6 +51,8 @@
 }
 
 .time-actuator {
+	flex: 1;
+	min-width: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
